# mushroom

./: .gitignore  CMakeLists.txt  README.md  demo.c  demo_client.c  demo_server.c  run.sh
examples/: codebuffer.c
examples/tcp/: tcp_client.c  tcp_server.c
examples/udp/: udp_client.c  udp_server.c
include/: mr_buffer.h  mr_code.h  mr_mem.h  mr_socket.h  mrsocket.h
mrsocket/: CMakeLists.txt  mr_config.h  mr_mem.c  mr_mem.h  mr_slist.h  mr_socket.c  socket_poll.h  socket_select.h  socket_server.c  socket_server.h
mrsocket/win/: atomic.h  spinlock.h  winport.h  winsocket.c  winsocket.h  winsocketdef.h
mrtool/: CMakeLists.txt  mr_buffer.c  mr_time.h  mrtool.h
